Cleaned up code

--- a/songs_with_flowers.html
+++ b/songs_with_flowers.html
@@ -102,8 +102,8 @@ The tale of a magnificent</div><!---->
       </div>
     </div>
     <!----><div ng-if="$ctrl.excerpt_with_markup" class="mini_card-lyric_excerpt" ng-bind-html="$ctrl.excerpt_with_markup">for ya
-Childish shit, you know child and shit
-Anonymous <span>flowers</span> sent, you know coward shit
+Childish sh, you know child and sh
+Anonymous <span>flowers</span> sent, you know coward sh
 Now a n signed</div><!---->
     <!---->
   </div>
